fix: better compatibility on smaller devices for recipe instruction but desktop change a bit. but it is worth ig

--- a/css/recipe.css
+++ b/css/recipe.css
@@ -29,7 +29,9 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 40px 25% 20px 25%;
+    margin: 40px 0 20px 0;
+    margin-left: min(max(10vw, 20px), 100px);
+    margin-right: min(max(10vw, 20px), 100px);
 }
 
 main ol {
